--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
     <!-- header section start -->
     <header class="header">
       <a href="#" class="logo">
-        <img src="images/images/logo.png" alt="logo" />
+        <img src="images/logo.png" alt="logo" />
       </a>
       <nav class="navbar">
         <a href="#" class="active">Home</a>
@@ -66,7 +66,7 @@
       <div class="box-container">
         <div class="box">
           <div class="box-head">
-            <img src="images/images/menu-1.png" alt="menu" />
+            <img src="images/menu-1.png" alt="menu" />
             <span class="menu-category">PIZZA</span>
             <h3>6 Mini Pizzas</h3>
             <div class="price">$104.99 <span>119.99</span></div>
@@ -78,7 +78,7 @@
 
         <div class="box">
           <div class="box-head">
-            <img src="images/images/menu-2.png" alt="menu" />
+            <img src="images/menu-2.png" alt="menu" />
             <span class="menu-category">BURGER</span>
             <h3>5 Mini Burgers</h3>
             <div class="price">$99.99 <span>109.99</span></div>
@@ -90,7 +90,7 @@
 
         <div class="box">
           <div class="box-head">
-            <img src="images/images/menu-3.png" alt="menu" />
+            <img src="images/menu-3.png" alt="menu" />
             <span class="menu-category">PIZZA</span>
             <h3>2 Mixed Pizzas</h3>
             <div class="price">$49.99 <span>59.99</span></div>
@@ -102,7 +102,7 @@
 
         <div class="box">
           <div class="box-head">
-            <img src="images/images/menu-4.png" alt="menu" />
+            <img src="images/menu-4.png" alt="menu" />
             <span class="menu-category">BURGER</span>
             <h3>3 Meatball Burgers</h3>
             <div class="price">$79.99 <span>99.99</span></div>
@@ -125,7 +125,7 @@
             <a href="#" class="name">Bacon Burger</a>
           </div>
           <div class="iamege">
-            <img src="images/images/product-1.png" alt="" />
+            <img src="images/product-1.png" alt="" />
           </div>
           <div class="box-bottom">
             <div class="info">
@@ -146,7 +146,7 @@
             <a href="#" class="name">Bacon Burger</a>
           </div>
           <div class="iamege">
-            <img src="images/images/product-2.png" alt="" />
+            <img src="images/product-2.png" alt="" />
           </div>
           <div class="box-bottom">
             <div class="info">
@@ -167,7 +167,7 @@
             <a href="#" class="name">Bacon Burger</a>
           </div>
           <div class="iamege">
-            <img src="images/images/dark-product.jpg" alt="" />
+            <img src="images/dark-product.jpg" alt="" />
           </div>
           <div class="box-bottom">
             <div class="info">
@@ -190,7 +190,7 @@
       <h1 class="heading">about <span>us</span></h1>
       <div class="row">
         <div class="image">
-          <img src="images/images/about.jpg" alt="about" />
+          <img src="images/about.jpg" alt="about" />
         </div>
         <div class="content">
           <h3>what is the secret recipe of our burgers?</h3>
@@ -224,9 +224,9 @@
       <h1 class="heading">CUSTOMER'S <span>REVİEW</span></h1>
       <div class="box-container">
         <div class="box">
-          <img src="images/images/quote.png" alt="quote"/>
+          <img src="images/quote.png" alt="quote"/>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus praesentium numquam eos sapiente sint corporis, quis, odio at doloribus qui aut cumque eius, incidunt assumenda exercitationem dolore quam dolorum fuga.</p>
-          <img src="images/images/avatar-1.png" alt="avatar" class="user"/>
+          <img src="images/avatar-1.png" alt="avatar" class="user"/>
           <h3>Jennifer Becker</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -237,9 +237,9 @@
           </div>
         </div>
         <div class="box">
-          <img src="images/images/quote.png" alt="quote"/>
+          <img src="images/quote.png" alt="quote"/>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus praesentium numquam eos sapiente sint corporis, quis, odio at doloribus qui aut cumque eius, incidunt assumenda exercitationem dolore quam dolorum fuga.</p>
-          <img src="images/images/avatar-2.png" alt="avatar" class="user"/>
+          <img src="images/avatar-2.png" alt="avatar" class="user"/>
           <h3>John Doe</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -250,9 +250,9 @@
           </div>
         </div>
         <div class="box">
-          <img src="images/images/quote.png" alt="quote"/>
+          <img src="images/quote.png" alt="quote"/>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus praesentium numquam eos sapiente sint corporis, quis, odio at doloribus qui aut cumque eius, incidunt assumenda exercitationem dolore quam dolorum fuga.</p>
-          <img src="images/images/avatar-3.png" alt="avatar" class="user"/>
+          <img src="images/avatar-3.png" alt="avatar" class="user"/>
           <h3>Lisa Arambula</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -300,7 +300,7 @@
           <div class="box-container">
             <div class="box">
               <div class="image">
-                <img src="images/images/blog-1.jpg" alt="blog" />
+                <img src="images/blog-1.jpg" alt="blog" />
               </div>
               <div class="content">
                 <a href="#" class="title">how to make burgers?</a>
@@ -314,7 +314,7 @@
             </div>
             <div class="box">
               <div class="image">
-                <img src="images/images/blog-2.jpg" alt="blog" />
+                <img src="images/blog-2.jpg" alt="blog" />
               </div>
               <div class="content">
                 <a href="#" class="title">how to make burgers?</a>
@@ -328,7 +328,7 @@
             </div>
             <div class="box">
               <div class="image">
-                <img src="images/images/blog-3.jpg" alt="blog" />
+                <img src="images/blog-3.jpg" alt="blog" />
               </div>
               <div class="content">
                 <a href="#" class="title">how to make burgers?</a>
