--- a/index.htm
+++ b/index.htm
@@ -349,8 +349,8 @@
           <div class="search">
             <input type="text" 
             class="search-input"
-            placeholder="search">
-            <button class="btn btn-primary"> Search</button>
+            placeholder="      search">
+            <button class="btn btn-primary">Search</button>
           </div>
           <div class="share">
             <a href="#" class="fab fa-facebook"></a>
@@ -369,7 +369,7 @@
             <a href="#">Blogs</a>
           </div>
           <div class="credit">
-            created by <span>Hatice Kartal</span> | all right reserved
+            created by <a href="https://github.com/h-attam"> <span> Hatice Kartal </span></a> | all right reserved
           </div>
         </section>
         <!-- footer section end  -->
